# monte-carlo-wedding

./: README.md  pyproject.toml  wedding_guests.csv  wedding_guests_easy.csv  wedding_sim.ipynb
