[tool.poetry]
name = "monte-carlo-wedding"
version = "0.1.0"
description = ""
authors = ["Paul Leonard <paul.ryan.leonard@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
seaborn = "^0.11.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
